syntax = "proto3";
package com.stakhovskyi.grpc;

service InventoryService {
  rpc IsInStock(InventoryRequest) returns (InventoryResponse);
}

message InventoryRequest {
  string skuCode = 1;
}

message InventoryResponse {
  bool inStock = 1;
}
